[gd_scene load_steps=9 format=3 uid="uid://diufpov6ev5u4"]

[ext_resource type="Script" uid="uid://bpb7frn88mlpw" path="res://control.gd" id="1_62e2m"]
[ext_resource type="Texture2D" uid="uid://d24nykowixrkf" path="res://trailblazerLogo.png" id="2_ee4bf"]
[ext_resource type="Texture2D" uid="uid://404bb4mhhsf5" path="res://arrow-left-line.png" id="3_qtu10"]
[ext_resource type="Texture2D" uid="uid://o1q6fsb6qqhh" path="res://eye-line.png" id="4_ee4bf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.800491, 0.800491, 0.80049, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbped"]
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fbet"]
bg_color = Color(0, 0.56362, 0.968003, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(0.737193, 0.737193, 0.737193, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62e2m")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -693.0
offset_top = -15.0
offset_right = 1767.0
offset_bottom = 1911.0
texture = ExtResource("2_ee4bf")

[node name="Username" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = -1214.0
offset_right = -98.0
offset_bottom = -1055.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_placeholder_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(0.252028, 0.252028, 0.252028, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_62e2m")
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 119.0
offset_top = -943.0
offset_right = -98.0
offset_bottom = -784.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_placeholder_color = Color(0.65834, 0.65834, 0.65834, 1)
theme_override_colors/font_color = Color(0.25098, 0.25098, 0.25098, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_62e2m")
placeholder_text = "Password
"

[node name="Reveal" type="Button" parent="Password"]
layout_mode = 0
offset_left = 728.0
offset_top = 44.0
offset_right = 826.0
offset_bottom = 117.0
theme_override_styles/normal = SubResource("StyleBoxFlat_kbped")
icon = ExtResource("4_ee4bf")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 1211.0
offset_right = 710.0
offset_bottom = 1340.0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_0fbet")
text = "Sign up
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 636.0
offset_right = 427.0
offset_bottom = 707.0
theme_override_colors/font_color = Color(0.0605303, 0.0605303, 0.0605303, 1)
theme_override_font_sizes/font_size = 30
text = "Create an Account"

[node name="Alert" type="Label" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 878.0
offset_right = 502.0
offset_bottom = 923.0
theme_override_colors/font_color = Color(1, 0.0588235, 0.0588235, 1)
theme_override_font_sizes/font_size = 30
text = "Username already taken!!"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 200.0
offset_top = 1236.0
offset_right = 287.0
offset_bottom = 1316.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ee4bf")
icon = ExtResource("3_qtu10")
flat = true
expand_icon = true

[node name="Login" type="Button" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 1377.0
offset_right = 811.0
offset_bottom = 1428.0
theme_override_colors/font_color = Color(0.502817, 0.663302, 1, 1)
theme_override_font_sizes/font_size = 25
text = "Have an account? Log in"
flat = true

[connection signal="pressed" from="Password/Reveal" to="." method="_on_reveal_pressed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
